--- a/FamilyBudget/Views/Modal/FinOperationEdit.cshtml
+++ b/FamilyBudget/Views/Modal/FinOperationEdit.cshtml
@@ -4,72 +4,61 @@
     ViewData["Title"] = "FinOperationEdit";
 }
 
-<h4>FinOperationModal</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="FinOperationEdit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="FinType" class="control-label"></label>
-                <select asp-for="FinType" class="form-control"></select>
-                <span asp-validation-for="FinType" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ForAll" /> @Html.DisplayNameFor(model => model.ForAll)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="Value" class="control-label"></label>
-                <input asp-for="Value" class="form-control" />
-                <span asp-validation-for="Value" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
-                <span asp-validation-for="CategoryId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectMemberId" class="control-label"></label>
-                <select asp-for="ProjectMemberId" class="form-control" asp-items="ViewBag.ProjectMemberId"></select>
-                <span asp-validation-for="ProjectMemberId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateTime" class="control-label"></label>
-                <input asp-for="CreateTime" class="form-control" />
-                <span asp-validation-for="CreateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdateTime" class="control-label"></label>
-                <input asp-for="UpdateTime" class="form-control" />
-                <span asp-validation-for="UpdateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsNotFound" /> @Html.DisplayNameFor(model => model.IsNotFound)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsForbid" /> @Html.DisplayNameFor(model => model.IsForbid)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<div class="modal-content">
+    <div class="modal-header">
+    <h5 class="modal-title">Edit project</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    </div>
+    <form asp-area="" asp-controller="FinOperations" asp-action="Edit">
+        <div class="modal-body">
+        <div class="row">
+            <div class="col-md">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="FinType" class="control-label"></label>
+                    <select asp-for="FinType" asp-items="@Html.GetEnumSelectList<FinType>()" class="form-control"></select>
+                    <span asp-validation-for="FinType" class="text-danger"></span>
+                </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="ForAll" /> @Html.DisplayNameFor(model => model.ForAll)
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Value" class="control-label"></label>
+                    <input asp-for="Value" class="form-control" />
+                    <span asp-validation-for="Value" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CategoryId" class="control-label"></label>
+                    <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProjectMemberId" class="control-label"></label>
+                    <select asp-for="ProjectMemberId" class="form-control" asp-items="ViewBag.ProjectMemberId"></select>
+                    <span asp-validation-for="ProjectMemberId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProjectId" class="control-label"></label>
+                    <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                    <span asp-validation-for="ProjectId" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+         @if (Model.IsValid)
+         {
+            <input type="submit" value="Edit" class="btn btn-info btn-ok" />
+         }
+        </div>
+        </form>
 </div>
 
 @section Scripts {
