--- a/FamilyBudget/Views/FinOperations/Edit.cshtml
+++ b/FamilyBudget/Views/FinOperations/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FinType" class="control-label"></label>
-                <select asp-for="FinType" class="form-control"></select>
+                <select asp-for="FinType" class="form-control" asp-items="ViewBag.FinType"></select>
                 <span asp-validation-for="FinType" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
