Добавил изменение курсора при наведении

--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -185,8 +185,8 @@
                         }
                     </td>
                     <td class="col-3">@fo.FinType</td>
-                    <td id="@fo.Id" class="bi bi-pencil finOperationEdit"></td>
-                    <td id="@fo.Id" class="bi bi-x-lg finOperationDelete"></td>
+                    <td id="@fo.Id" class="bi bi-pencil finOperationEdit" style="cursor: pointer"></td>
+                    <td id="@fo.Id" class="bi bi-x-lg finOperationDelete" style="cursor: pointer"></td>
                 </tr>
             }
         </tbody>
