--- a/FamilyBudget/Views/Home/Index.cshtml
+++ b/FamilyBudget/Views/Home/Index.cshtml
@@ -41,6 +41,7 @@ else
                 @Html.DisplayFor(modelItem => item.Name)
             </span>
 
+            <i id="@item.Id" class="bi bi-pencil projectEdit"></i>
             <i id="@item.Id" class="bi bi-x-lg projectDelete"></i>
         </a>
     }
