--- a/FamilyBudget/Views/Modal/FinOperationEdit.cshtml
+++ b/FamilyBudget/Views/Modal/FinOperationEdit.cshtml
@@ -68,7 +68,15 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         @if (Model.IsValid)
         {
-           <input id="chargeSubmit" type="submit" value="Edit" class="btn btn-info btn-ok" />
+            @if(Model.FinType == FinType.Income)
+            {
+                <input type="submit" value="Edit" class="btn btn-info btn-ok" />
+            }
+            else
+            {
+                <input id="chargeSubmit" type="submit" value="Edit" class="btn btn-info btn-ok" />
+            }
+
         }
         </div>
         </form>
