--- a/FamilyBudget/Views/Home/Edit.cshtml
+++ b/FamilyBudget/Views/Home/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var test = 0;
 }
 
 <h1>Edit</h1>
@@ -9,51 +10,137 @@
 <div class="row">
     <div class="container-fluid">
         <form asp-controller="Projects" asp-action="Edit" asp-route-id="@Model.projectId">
+            <div class="form-group">
+                <label asp-for="@Model.project.Name" class="control-label"></label>
+                <input asp-for="@Model.project.Name" class="form-control" placeholder="Project name" />
+                <span asp-validation-for="@Model.project.Name" class="text-danger"></span>
+            </div>
+
             <div class="row">
-                <div class="col-sm-6 list-group">
+                <div class="col-sm-4">
                     <h4 class="text-center">Categories</h4>
+                    <a class="addCategory pull-right bi bi-plus-circle" style="cursor: pointer"></a>
 
-                    <a class="list-group-item-warning list-group-item-action
-                             text-center text-center bi bi-plus-circle">                            
-                    </a>
+                    <div id="categoryList" class="list-group">
+                        @foreach (var item in Model.categories)
+                        {
+                            
+                            <div id="@item.Id">
+                            <a id="category-@item.Id" categoryId="@item.Id" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                                <span class="flex-grow-1 list-group-item-action">
+                                    <input asp-for="@item.Name" class="form-control" value="@item.Name" />
+                                </span>
 
-                    @foreach (var item in Model.categories)
-                    {
-                        <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                            <span class="projectListItem list-group-item-action flex-grow-1">
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </span>
-
-                            <i id="@item.Id" class="bi bi-pencil projectEdit mr-2"></i>
-                            <i id="@item.Id" class="bi bi-x-lg projectDelete"></i>
-                        </div>
-                    }
+                                <i id="@item.Id" class="categoryDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
+                            </a>
+                            </div>
+                        }
+                    </div>
                 </div>
-
-                <div class="col-sm-6 list-group">
+                <div class="col-sm-8">
                     <h4 class="text-center">ProjectMembers</h4>
+                    <a class="addProjectMember pull-right bi bi-plus-circle" style="cursor: pointer"></a>
+                    <div id="projectMemberList" class="list-group">
 
-                    <a class="list-group-item-warning list-group-item-action
-                             text-center text-center bi bi-plus-circle">                            
-                    </a>
+                        @foreach (var item in Model.projectMembers)
+                        {   
+                            <div id="@item.Id">
+                            <a id="projectMember-@item.Id" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                                <span class="flex-grow-1 row ">
+                                    <input asp-for="@item.NameInProject" class="form-control col-lg-5 mr-2" value="@item.NameInProject" />
+                                    <input asp-for="@item.User.Email" class="form-control col-lg-6" value="@item.User.Email" />
+                                </span>
 
-                    @foreach (var item in Model.projectMembers)
-                    {
-                        <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                            <span class="projectListItem list-group-item-action flex-grow-1">
-                                @Html.DisplayFor(modelItem => item.NameInProject)
-                            </span>
-
-                            <i id="@item.Id" class="bi bi-pencil projectEdit mr-2"></i>
-                            <i id="@item.Id" class="bi bi-x-lg projectDelete"></i>
-                        </div>
-                    }
+                                <i id="@item.Id" class="projectMemberDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
+                            </a>
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
             <div class="pull-right">
-                <input class="btn btn-primary mr-2" type="submit" value="Save"  />
+                <input class="btn btn-primary mr-2" type="submit" value="Save" />
                 <a class="btn btn-secondary" asp-action="Index">Back</a>
             </div>
         </form>
     </div>
 </div>
+
+@section scripts
+{
+<script type="text/javascript">
+    $(document).ready(function () {
+
+        const generateCategory = (id,name) => {
+            return `  
+                    <div id="${id}">
+                    <a id="category-${id}" categoryId="${id}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                                <span class="flex-grow-1 list-group-item-action">
+                                    <input asp-for="${name}" class="form-control" value="${name}"/>
+                                </span>
+
+                                <i id="${id}" class="categoryDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
+                    </a>
+                    </div>`;
+        }
+
+        const generateProjectMember = (id,name,email) => {
+            return ` <a id="projectMember-${id}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                                <span class="flex-grow-1 row ">
+                                    <input asp-for="${name}" class="form-control col-lg-5 mr-2" value="${name}"/>
+                                    <input asp-for="${email}" class="form-control col-lg-6" value="${email}"/>
+                                </span>
+
+                                <i id="${id}" class="projectMemberDelete bi bi-x-lg ml-3" style="cursor: pointer"></i>
+                     </a>`;
+
+
+        }
+
+        $(".addCategory").click(function (e) {
+            e.preventDefault();
+            let list = document.querySelector('#categoryList');
+
+            var id = "-1";
+            var name = "Not unique! id = " + id;
+
+            var div = document.createElement('div');
+            div.innerHTML = generateCategory(id,name);
+            list.insertBefore(div,list.firstElementChild);
+
+            $(".categoryDelete").click(function (e) {
+            e.preventDefault();
+            $("#category-" + id).remove();
+        });
+        });
+
+        $(".addProjectMember").click(function (e) {
+            e.preventDefault();
+            let list = document.querySelector('#projectMemberList');
+
+            var id = "-1";
+            var name = "Not unique! id = " + id;
+            var email = "email";
+
+            var div = document.createElement('div');
+            div.innerHTML = generateProjectMember(id,name,email);
+            list.insertBefore(div,list.firstElementChild);
+
+            $(".projectMemberDelete").click(function (e) {
+            e.preventDefault();
+            $("#projectMember-" + this.id).remove();
+        });
+        });
+
+        $(".categoryDelete").click(function (e) {
+            e.preventDefault();
+            $("#category-" + this.id).remove();
+        });
+
+        $(".projectMemberDelete").click(function (e) {
+            e.preventDefault();
+            $("#projectMember-" + this.id).remove();
+        });
+    });
+</script>
+}
