--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -33,20 +33,35 @@
     <div class="card-body">
         <form>
             <div class="form-inline">
-                <select type="submit" class="form-control col-sm-1 ml-2 mr-auto" name="finType"
+                <span style="display:inline-block" class="col-sm-1 ml-2 mr-auto">
+                <small class="form-text">FinType:</small>
+                <select type="submit" class="form-control" name="finType"
                         asp-for="@Model.FilterViewModel.SelectedFinType"
                         asp-items="@Model.FilterViewModel.FinTypes"
                         onchange="this.form.submit()"></select>
+                </span>
 
+                <span style="display:inline-block" class="col-2">
+                <small class="form-text">ProjectMember:</small>
                 <select type="submit" asp-for="@Model.FilterViewModel.SelectedProjectMember" class="form-control" name="projectMember"
                 asp-items="@Model.ProjectMembers" onchange="this.form.submit()"></select>
+                </span>
 
-                <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off"
-                       class="form-control col-3 m-auto" name="category" value="@Model.FilterViewModel.SelectedCategory" />
+                <span style="display:inline-block" class="col-3 m-auto">
+                <small class="form-text">Category:</small>
+                <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off" placeholder="Category"
+                       class="form-control" name="category" value="@Model.FilterViewModel.SelectedCategory" />
+                </span>
 
-                <input class="form-control col-2 m-1" type="date" name="beginDate" asp-for="@Model.FilterViewModel.SelectedBeginDate">
+                <span style="display:inline-block" class="col-2 m-1">
+                <small class="form-text">from:</small>
+                <input class="form-control" type="date" name="beginDate" asp-for="@Model.FilterViewModel.SelectedBeginDate">
+                </span>
 
-                <input class="form-control col-2 m-1" type="date" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate">
+                <span style="display:inline-block" class="col-2 m-1">
+                <small class="form-text">to:</small>
+                <input class="form-control" type="date" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate">
+                </span>
             </div>
         </form>
     </div>
