--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -62,7 +62,7 @@
                 <small class="form-text">to:</small>
                 <input class="form-control" type="date" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate">
                 </span>
-                <button type="submit" class="btn btn-success"><i class="bi bi-filter"></i>Filter</button>
+                <button type="submit" class="btn btn-sm btn-success">Filter<i class="bi bi-filter"></i></button>
             </div>
         </form>
     </div>
