--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -24,45 +24,50 @@
             <h3 class="flex-grow-1">@Model.ProjectName</h3>
 
             <a asp-controller="Modal" asp-action="AddIncome" asp-route-id="@Model.FilterViewModel.SelectedProject"
-               class="btn btn-sm btn-warning addIncome m-2 align">Income <i class="bi bi-plus-lg"></i></a>
+               class="btn btn-warning addIncome m-2 align">Income <i class="bi bi-plus-lg"></i></a>
             <a asp-controller="Modal" asp-action="AddCharge" asp-route-id="@Model.FilterViewModel.SelectedProject"
-               class="btn btn-sm btn-info btn addCharge m-2 pull-right">Charge <i class="bi bi-plus-lg"></i></a>
+               class="btn btn-info btn addCharge m-2 pull-right">Charge <i class="bi bi-plus-lg"></i></a>
         </div>
 
     </div>
     <div class="card-body">
         <form>
-            <div class="form-inline align-items-center">
-                <span style="display:inline-block" class="col-sm-1 ml-2 mr-auto">
-                <small class="form-text">FinType:</small>
-                <select type="submit" class="form-control" name="finType"
-                        asp-for="@Model.FilterViewModel.SelectedFinType"
-                        asp-items="@Model.FilterViewModel.FinTypes"
-                        onchange="this.form.submit()"></select>
-                </span>
+            <div class="row g-3 align-items-center d-flex">
+                <div class="ml-2 mr-2">
+                    <label class="form-label">FinType:</label>
+                    <select type="submit" class="form-control" name="finType"
+                            asp-for="@Model.FilterViewModel.SelectedFinType"
+                            asp-items="@Model.FilterViewModel.FinTypes"
+                            onchange="this.form.submit()"></select>
+                </div>
 
-                <span style="display:inline-block" class="col-2">
-                <small class="form-text">ProjectMember:</small>
-                <select type="submit" asp-for="@Model.FilterViewModel.SelectedProjectMember" class="form-control" name="projectMember"
-                asp-items="@Model.ProjectMembers" onchange="this.form.submit()"></select>
-                </span>
+                <div class="ml-2 mr-2">
+                    <label class="form-label">ProjectMember:</label>
+                    <select type="submit" asp-for="@Model.FilterViewModel.SelectedProjectMember" class="form-control" name="projectMember"
+                            asp-items="@Model.ProjectMembers" onchange="this.form.submit()"></select>
+                </div>
 
-                <span style="display:inline-block" class="col-3 m-auto">
-                <small class="form-text">Category:</small>
-                <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off" placeholder="Category"
-                       class="form-control" name="category" value="@Model.FilterViewModel.SelectedCategory" />
-                </span>
+                <div class="flex-grow-1">
+                    <label class="form-label">Category:</label>
+                    <input type="text" id="inputCategory" data-projectId="@Model.FilterViewModel.SelectedProject" autocomplete="off" placeholder="Category"
+                           class="form-control" name="category" value="@Model.FilterViewModel.SelectedCategory" />
+                </div>
 
-                <span style="display:inline-block" class="col-2 m-1">
-                <small class="form-text">from:</small>
-                <input class="form-control" type="date" name="beginDate" asp-for="@Model.FilterViewModel.SelectedBeginDate">
-                </span>
+                <div class="col-2">
+                    <label class="form-label">from:</label>
+                    <input class="form-control" name="beginDate" asp-for="@Model.FilterViewModel.SelectedBeginDate"
+                           placeholder="Date" type="text" onfocus="(this.type='date')" onblur="(this.type='text')">
+                </div>
 
-                <span style="display:inline-block" class="col-2 m-1">
-                <small class="form-text">to:</small>
-                <input class="form-control" type="date" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate">
-                </span>
-                <button type="submit" class="btn btn-sm btn-success">Filter<i class="bi bi-filter"></i></button>
+                <div class="col-2">
+                    <label class="form-label">before:</label>
+                    <input class="form-control" name="endDate" asp-for="@Model.FilterViewModel.SelectedEndDate"
+                           placeholder="Date" type="text" onfocus="(this.type='date')" onblur="(this.type='text')">
+                </div>
+                <div class="btn-group-vertical ml-2 mr-2">
+                    <button type="submit" class="form-label btn btn-light bi bi-funnel-fill"></button>
+                    <a href="@Model.FilterViewModel.SelectedProject" class="btn btn-light bi bi-funnel"></a>
+                </div>
             </div>
         </form>
     </div>
@@ -102,106 +107,90 @@
     @if (!Model.IsEmpty)
     {
         <table class="table">
+            <a asp-action="Details"
+            asp-route-id="@(Model.FilterViewModel.SelectedProject)"
+            asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
+            asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)">
             <thead>
                 <tr>
                     <th>
-                        <a class="btn btn-sm @(Model.SortViewModel.categorySort ? "btn-primary" : "btn-light")"
-                       asp-action="Details"
-                       asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)"
-                       asp-route-sortmodel="@(FinOperationSortModelEnum.Category)"
-                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Category) ?
-                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Category
-                            @if (@Model.SortViewModel.categorySort)
-                            {
-                                <i class="fa fa-fw @(Model.SortViewModel.isAscending ? "fa-sort-asc" : "fa-sort-desc")"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-fw fa-sort"></i>
-                            }
-                        </a>
-                    </th>
-
-                    <th>
-                        <a class="btn btn-sm @(Model.SortViewModel.projectMemberSort ? "btn-primary" : "btn-light")"
-                       asp-action="Details"
-                       asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)"
-                       asp-route-sortmodel="@(FinOperationSortModelEnum.ProjectMember)"
-                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.ProjectMember) ?
-                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            ProjectMember
-                            @if (@Model.SortViewModel.projectMemberSort)
-                            {
-                                <i class="fa fa-fw @(Model.SortViewModel.isAscending ? "fa-sort-asc" : "fa-sort-desc")"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-fw fa-sort"></i>
-                            }
-                        </a>
-                    </th>
-                    <th>
-                        <a class="btn btn-sm @(Model.SortViewModel.valueSort ? "btn-primary" : "btn-light")"
-                       asp-action="Details"
-                       asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)"
-                       asp-route-sortmodel="@(FinOperationSortModelEnum.Value)"
-                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Value) ?
-                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            Value
-                            @if (@Model.SortViewModel.valueSort)
-                            {
-                                <i class="fa fa-fw @(Model.SortViewModel.isAscending ? "fa-sort-asc" : "fa-sort-desc")"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-fw fa-sort"></i>
-                            }
-                        </a>
-                    </th>
-                    <th>
-                        <a class="btn btn-sm @(Model.SortViewModel.createTimeSort ? "btn-primary" : "btn-light")"
-                       asp-action="Details"
-                       asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)"
-                       asp-route-sortmodel="@(FinOperationSortModelEnum.CreateTime)"
-                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.CreateTime) ?
-                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
-                            CreateTime
-                            @if (@Model.SortViewModel.createTimeSort)
-                            {
-                                <i class="fa fa-fw @(Model.SortViewModel.isAscending ? "fa-sort-asc" : "fa-sort-desc")"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-fw fa-sort"></i>
-                            }
-                        </a>
-                    </th>
-                    <th>
-                        <a class="btn btn-sm @(Model.SortViewModel.finTypeSort ? "btn-primary" : "btn-light")"
-                       asp-action="Details"
-                       asp-route-id="@(Model.FilterViewModel.SelectedProject)"
-                       asp-route-category="@(Model.FilterViewModel.SelectedCategory)"
-                       asp-route-fintype="@(Model.FilterViewModel.SelectedFinType)"
+                        <a class="btn @(Model.SortViewModel.finTypeSort ? "btn-primary" : "btn-light")"
                        asp-route-sortmodel="@(FinOperationSortModelEnum.FinType)"
                        asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.FinType) ?
                                                 null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
                             FinType
                             @if (@Model.SortViewModel.finTypeSort)
                             {
-                                <i class="fa fa-fw @(Model.SortViewModel.isAscending ? "fa-sort-asc" : "fa-sort-desc")"></i>
+                                <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-down" : "bi-sort-up")"></i>
                             }
                             else
                             {
-                                <i class="fa fa-fw fa-sort"></i>
+                                <i class="bi bi-filter-left"></i>
+                            }
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn @(Model.SortViewModel.projectMemberSort ? "btn-primary" : "btn-light")"
+                       
+                       asp-route-sortmodel="@(FinOperationSortModelEnum.ProjectMember)"
+                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.ProjectMember) ?
+                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
+                            ProjectMember
+                            @if (@Model.SortViewModel.projectMemberSort)
+                            {
+                                <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-alpha-down" : "bi-sort-alpha-up")"></i>
+                            }
+                            else
+                            {
+                                <i class="bi bi-filter-left"></i>
+                            }
+                        </a>
+                    </th>          
+                    <th>
+                        <a class="btn @(Model.SortViewModel.categorySort ? "btn-primary" : "btn-light")"
+                       asp-route-sortmodel="@(FinOperationSortModelEnum.Category)"
+                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Category) ?
+                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
+                            Category
+                            @if (@Model.SortViewModel.categorySort)
+                            {
+                                <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-alpha-down" : "bi-sort-alpha-up")"></i>
+                            }
+                            else
+                            {
+                                <i class="bi bi-filter-left"></i>
+                            }
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn @(Model.SortViewModel.valueSort ? "btn-primary" : "btn-light")"
+                       asp-route-sortmodel="@(FinOperationSortModelEnum.Value)"
+                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.Value) ?
+                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
+                            Value
+                            @if (@Model.SortViewModel.valueSort)
+                            {
+                                <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-numeric-down" : "bi-sort-numeric-up")"></i>
+                            }
+                            else
+                            {
+                                <i class="bi bi-filter-left"></i>
+                            }
+                        </a>
+                    </th>
+                    <th>
+                        <a class="btn @(Model.SortViewModel.createTimeSort ? "btn-primary" : "btn-light")"
+                       asp-route-sortmodel="@(FinOperationSortModelEnum.CreateTime)"
+                       asp-route-sortdir="@(!Model.SortViewModel.sortModelChanged(FinOperationSortModelEnum.CreateTime) ?
+                                                null : Model.SortViewModel.changeSortDir(Model.SortViewModel.CurrentSortDir))">
+                            CreateTime
+                            @if (@Model.SortViewModel.createTimeSort)
+                            {
+                                <i class="bi @(Model.SortViewModel.isAscending ? "bi-sort-numeric-down" : "bi-sort-numeric-up")"></i>
+                            }
+                            else
+                            {
+                                <i class="bi bi-filter-left"></i>
                             }
                         </a>
                     </th>
@@ -213,12 +202,7 @@
                 @foreach (FinOperation fo in Model.FinOperations)
                 {
                     <tr>
-                        <td class="col-3">
-                            @if (fo.Category != null)
-                            {
-                                <label>@fo.Category.Name</label>
-                            }
-                        </td>
+                        <td class="col-2">@fo.FinType</td>                      
                         <td class="col-3">
                             @if (fo.ProjectMember != null)
                             {
@@ -227,6 +211,12 @@
                             else
                             {
                                 <label>Семья</label>
+                            }
+                        </td>
+                         <td class="col-3">
+                            @if (fo.Category != null)
+                            {
+                                <label>@fo.Category.Name</label>
                             }
                         </td>
                         <td class="col-2">@fo.Value</td>
@@ -248,12 +238,12 @@
                                 <label>@fo.CreateTime.ToString("d MMMM yyyy")</label>
                             }
                         </td>
-                        <td class="col-3">@fo.FinType</td>
                         <td id="@fo.Id" class="bi bi-pencil finOperationEdit" style="cursor: pointer"></td>
                         <td id="@fo.Id" class="bi bi-x-lg finOperationDelete" style="cursor: pointer"></td>
                     </tr>
                 }
             </tbody>
+        </a>
         </table>
 
 
